--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5",
-    "nodemon": "^1.15.0",
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
+    "express-fileupload": "^0.4.0",
+    "express-flash": "0.0.2",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
+    "flash": "^1.1.0",
+    "foreach": "^2.0.5",
     "mongoose": "^4.10.2",
+    "morgan": "~1.9.0",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.6.2",
+    "nodemon": "^1.15.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.0-rc.1"
+    "path": "^0.12.7",
+    "pug": "^2.0.0-rc.1",
+    "serve-favicon": "~2.4.5"
   }
 }
-
